--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="CVPR2023 PartSLIP: Low-Shot Part Segmentation for 3D Point Clouds via Pretrained Image-Language Models">
-  <meta name="keywords" content="3D Part Segmentation, zero-shot, few-shot, vision-language model, point clouds">
+  <meta name="description" content="PARIS3D: Reasoning-based 3D Part Segmentation Using Large Multimodal Model">
+  <meta name="keywords" content="3D Part Segmentation, Reasoning, vision-language models">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PartSLIP</title>
 
@@ -35,33 +35,25 @@
     <div class="container ">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">PartSLIP: Low-Shot Part Segmentation for 3D Point Clouds via Pretrained Image-Language Models</h1>
+          <h1 class="title is-1 publication-title">PARIS3D: Reasoning-based 3D Part Segmentation Using Large Multimodal Model</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://cseweb.ucsd.edu/~mil070/">Minghua Liu</a><sup>1</sup>,</span>
+              <a href="https://github.com/AmrinKareem">Amrin Kareem</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://yinhaoz.github.io">Yinhao Zhu</a><sup>2</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=LsivLPoAAAAJ&hl=en">Dr. Jean Lahoud</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=9y3Kd3cAAAAJ&hl=en">Hong Cai</a><sup>2</sup>,</span>
-            <span class="author-block">
-              <a href="https://sites.google.com/view/shizhonghan/home">Shizhong Han</a><sup>2</sup>,</span>
-              <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=y0zdQmMAAAAJ&hl=zh-TW">Zhan Ling</a><sup>1</sup>,</span>
-            <span class="author-block">
-              <a href="https://www.porikli.com">Fatih Porikli</a><sup>2</sup>,</span>
-            <span class="author-block">
-              <a href="https://cseweb.ucsd.edu//~haosu/">Hao Su</a><sup>1</sup>.</span>
+              <a href="https://scholar.google.com/citations?user=bZ3YBRcAAAAJ&hl=en">Dr. Hisham Cholakkal</a><sup>1</sup>,</span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University of California San Diego, <sup>2</sup>Qualcomm AI Research</span>
+            <span class="author-block"><sup>1</sup>Mohamed bin Zayed University of Artificial Intelligence, Abu Dhabi</span>
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2212.01558.pdf"
+                <a href="https://.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -71,7 +63,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=VGORtR2mJog"
+                <a href="https://youtu.be/aJMQCJJObzU?feature=shared"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -81,7 +73,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://drive.google.com/drive/u/3/folders/19j6PZfW8TDQ1ifHZwHIhn6X4BHjYRFCL"
+                <a href="https://github.com/AmrinKareem/PARIS3D"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -112,12 +104,12 @@
 <section class="hero teaser">
   <div class="container ">
     <div class="hero-body">
-      <img src="./static/images/teaser.png"
+      <img src="./static/images/redintro.png"
                  class="teaser-image"
                  alt="teaser image."/>
 
       <h2 class="subtitle has-text-centered">
-        We propose PartSLIP, a zero/few-shot method for 3D point cloud part segmentation by leveraging pretrained image-language models. The figure shows our semantic segmentation results.
+        We propose PARIS3D, a model that is capable of segmenting parts of 3D objects based on implicit textual queries and generating natural language explanations corresponding to 3D object segmentation requests. The figure shows our semantic segmentation results.
       </h2>
     </div>
   </div>
@@ -133,7 +125,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Generalizable 3D part segmentation is important but challenging in vision and robotics. Training deep models via conventional supervised methods requires large-scale 3D datasets with fine-grained part annotations, which are costly to collect. This paper explores an alternative way for low-shot part segmentation of 3D point clouds by leveraging a pretrained image-language model, GLIP, which achieves superior performance on open-vocabulary 2D detection. We transfer the rich knowledge from 2D to 3D through GLIP-based part detection on point cloud rendering and a novel 2D-to-3D label lifting algorithm. We also utilize multi-view 3D priors and few-shot prompt tuning to boost performance significantly. Extensive evaluation on PartNet and PartNet-Mobility datasets shows that our method enables excellent zero-shot 3D part segmentation. Our few-shot version not only outperforms existing few-shot approaches by a large margin but also achieves highly competitive results compared to the fully supervised counterpart. Furthermore, we demonstrate that our method can be directly applied to iPhone-scanned point clouds without significant domain gaps.
+            Recent advancements in 3D perception systems have significantly improved their ability to perform visual recognition tasks such as segmentation. However, these systems still heavily rely on explicit human instruction to identify target objects or categories, lacking the capability to actively reason and comprehend implicit user intentions. We introduce a novel segmentation task known as reasoning part segmentation for 3D objects, aiming to output a segmentation mask based on complex and implicit textual queries about specific parts of a 3D object.  To facilitate evaluation and benchmarking, we present a large 3D dataset comprising over 60k instructions paired with corresponding ground-truth part segmentation annotations specifically curated for reasoning-based 3D part segmentation.  We propose a model that is capable of segmenting parts of 3D objects based on implicit textual queries and generating natural language explanations corresponding to 3D object segmentation requests. Experiments show that our method achieves competitive performance to models that use explicit queries, with the additional abilities to identify part concepts, reason about them, and complement them with world knowledge.
           </p>
         </div>
       </div>
@@ -158,22 +150,19 @@
     <div class="container is-max-desktop has-text-centered">
       <div class="is-centered">
         <h2 class="title is-3">Overall Pipeline</h2>
-        <img src="./static/images/pipeline.png" class="pipeline" alt=""/>
+        <img src="./static/images/architecturefin.png" class="pipeline" alt=""/>
       </div>
-      <p>
-        The proposed components are highlighted in orange.
-     </p>
     </div>
 </section>  
 
 <section class="section">
     <div class="container is-max-desktop has-text-centered">
       <div class="is-centered">
-        <h2 class="title is-3">Instance Segmentation Results</h2>
-        <img src="./static/images/instance_seg.png" class="instance_seg" alt="" width="60%"/>
+        <h2 class="title is-3">Semantic Segmentation Results</h2>
+        <img src="./static/images/results.png" class="instance_seg" alt="" width="60%"/>
       </div>
       <p>
-        PartSLIP (8-shot) results on the PartNet-Ensembled dataset. Different part instances are in different colors.
+        PARIS3D results on the RPSeg dataset. Different part instances are in different colors.
      </p>
     </div>
 </section>  
@@ -182,7 +171,7 @@
     <div class="container is-max-desktop has-text-centered">
       <div class="is-centered">
         <h2 class="title is-3">Real-World Point Clouds</h2>
-        <img src="./static/images/realworld.png" class="realworld" alt="" width="100%"/>
+        <img src="./static/images/realpc.drawio.png" class="realworld" alt="" width="100%"/>
       </div>
       <p>
         PartSLIP can be directly applied to real-world point clouds without encountering significant domain gap: iPhone-scanned point clouds (first row), text prompts (second row), and PartSLIP (8-shot) results (third row).
