--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta name="description" content="PARIS3D: Reasoning-based 3D Part Segmentation Using Large Multimodal Model">
   <meta name="keywords" content="3D Part Segmentation, Reasoning, vision-language models">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PartSLIP</title>
+  <title>PARIS3D</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
-        rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./static/css/bulma.min.css">
   <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
