--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://youtu.be/aJMQCJJObzU?feature=shared"
+                <a href="https://www.youtube.com/watch?v=aJMQCJJObzU"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -136,7 +136,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://youtu.be/aJMQCJJObzU?feature=shared"
+          <iframe src="https://www.youtube.com/watch?v=aJMQCJJObzU"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
