--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <span class="author-block">
               <a href="https://github.com/AmrinKareem">Amrin Kareem</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=LsivLPoAAAAJ&hl=en">Dr. Jean Lahoud</a><sup>1</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=LsivLPoAAAAJ&hl=en">Jean Lahoud</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=bZ3YBRcAAAAJ&hl=en">Dr. Hisham Cholakkal</a><sup>1</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=bZ3YBRcAAAAJ&hl=en">Hisham Cholakkal</a><sup>1</sup>,</span>
           </div>
 
           <div class="is-size-5 publication-authors">
