--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Mohamed bin Zayed University of Artificial Intelligence, Abu Dhabi</span>
+            <span class="author-block"><sup>1</sup>Mohamed bin Zayed University of Artificial Intelligence, UAE</span>
           </div>
 
           <div class="column has-text-centered">
