--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <section class="hero teaser">
   <div class="container ">
     <div class="hero-body">
-      <img src="./static/images/redintro.png"
+      <img src="./static/images/introimage.png"
                  class="teaser-image"
                  alt="teaser image."/>
 
