--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://.pdf"
+                <a href="https://arxiv.org/abs/2404.03836"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -194,7 +194,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code> BIBTEXXXXXXXXXXXXXXXXXXXXX</code></pre>
+    <pre><code> @misc{kareem2024paris3d,
+      title={PARIS3D: Reasoning-based 3D Part Segmentation Using Large Multimodal Model}, 
+      author={Amrin Kareem and Jean Lahoud and Hisham Cholakkal},
+      year={2024},
+      eprint={2404.03836},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}</code></pre>
   </div>
 </section>
 
@@ -203,7 +210,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="https://arxiv.org/pdf/2212.01558.pdf">
+         href="https://arxiv.org/abs/2404.03836">
         <i class="fas fa-file-pdf"></i>
       </a>
       <a class="icon-link" href="https://github.com/AmrinKareem/PARIS3D" class="external-link" disabled>
